<resources>
    <string name="app_name">Freshify</string>
    <string name="home">Home</string>
    <string name="my_fridge">My Fridge</string>
    <string name="settings">Settings</string>
    <string name="add_item_to_your_fridge">Add Item to your Fridge</string>
    <string name="expiring_food">Expiring food</string>
    <string name="expired_food">Expired food</string>
    <string name="no_expiring_food">no expiring food.</string>
    <string name="no_expired_food">no expired food.</string>
    <string name="enter_expiry_date">Enter expiry date</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="item_name">Item name</string>
    <string name="comment">Comment</string>
    <string name="save_item">Save item</string>
    <string name="freshify" translatable="false">freshify</string>
    <string name="category_fruits_vegetables">Fruits and Vegetables</string>
    <string name="category_dairy_alternatives">Dairy and Alternatives</string>
    <string name="category_meat_fish_alternatives">Meat, Fish, and Alternatives</string>
    <string name="category_drinks">Drinks</string>
    <string name="category_prepared_meals">Prepared Meals</string>
    <string name="category_sauces_dips_spreads">Sauces, Dips, and Spreads</string>
    <string name="category_bakery_dough">Bakery and Dough Items</string>
    <string name="category_snacks_sweets">Snacks and Sweets</string>
    <string name="category_frozen_items">Frozen Items</string>
    <string name="category_canned_non_perishable">Canned and Non-Perishable Goods</string>
    <string name="category_spices_herbs_ingredients">Spices, Herbs, and Ingredients</string>
    <string name="category_miscellaneous">Miscellaneous</string>
    <string name="quantity">quantity</string>
    <string name="please_fill_in_all_required_fields">Please fill in all required fields</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="invalid_expiry_date_format">Invalid expiry date format</string>
    <string name="item_saved_successfully">Item saved successfully!</string>
    <string name="failed_to_save_item">Failed to save item</string>
    <string name="category">category</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="delete_item">delete item</string>
    <string name="expiring">expiring</string>
    <string name="item_deleted">Item deleted</string>
    <string name="failed_to_delete_item">Failed to delete item</string>
    <string name="loading">Loading…</string>
    <string name="delete_item_uppercase">Delete Item</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="item_details">Item Details</string>
    <string name="item_name_label">Item Name:</string>
    <string name="item">Item</string>
    <string name="quantity_label">Quantity:</string>
    <string name="_0">0</string>
    <string name="category_label">Category:</string>
    <string name="category_uppercase">Category</string>
    <string name="expiry_date_label">Expiry date:</string>
    <string name="expiry_date_uppercase">Expiry date</string>
    <string name="comment_label">Comment:</string>
    <string name="comment_uppercase">Comment</string>
    <string name="navigate_to_details">navigate to details</string>
    <string name="expires_in_one_day">expires in %1$d day</string>
    <string name="expires_in_multiple_days">expires in %1$d days</string>
    <string name="expired_since_one_day">expired since %1$d day</string>
    <string name="expired_since_days">expired since %1$d days</string>
    <string name="expires_in_x_days">expires in x days</string>
    <string name="expires_today">expires today</string>
    <string name="days_until_expiry">Days to Show Expiring Items</string>
    <string name="_3">3</string>
    <string name="how_long_does">"How long does "</string>
    <string name="last">" last?"</string>
    <string name="please_enter_an_item_name">Please enter an item name.</string>
    <string name="item_expired">Item expired!</string>
    <string name="the_item">"The item "</string>
    <string name="has_expired">" has expired."</string>
    <string name="multiple_items_expired">Multiple items expired!</string>
    <string name="items_have_expired_check_your_list">" items have expired. Check your list."</string>
    <string name="item_expiring_soon">Item expiring soon!</string>
    <string name="is_expiring_soon">" is expiring soon."</string>
    <string name="multiple_items_expiring_soon">Multiple items expiring soon!</string>
    <string name="items_are_expiring_soon_check_your_list">" items are expiring soon. Check your list."</string>
    <string name="permission_required">Permission required</string>
    <string name="please_grant_the_notification_permission_if_you_want_to_receive_notifications_for_expiring_or_expired_items">Please grant the notification permission if you want to receive notifications for expiring or expired items.</string>
    <string name="open_settings">Open settings</string>
    <string name="cancel">Cancel</string>
    <string name="manage_notification_permissions">Manage Notification Permissions</string>

</resources>