<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/itemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />

    <TextView
        android:id="@+id/itemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category" />

    <TextView
        android:id="@+id/itemExpiryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date" />
</LinearLayout>
