<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- left part item information -->
    <TextView
        android:id="@+id/expiryItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginEnd="8dp"
        android:text="@string/item_name"
        />

    <TextView
        android:id="@+id/expiryItemExpiryDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/expires_in_x_days"
            android:layout_weight="1"
        />

    <!-- right part navigate to details button -->
    <ImageView
        android:id="@+id/navigateToDetailsButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_details"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/navigate_to_details"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="@color/md_theme_inversePrimary" />


</LinearLayout>