<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- days until expiry setting -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_until_expiry"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/daysUntilExpiryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="24sp"
        android:layout_marginTop="8dp" />

    <SeekBar
        android:id="@+id/daysUntilExpirySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="28"
        android:layout_marginTop="8dp" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginVertical="16dp" />

    <!-- notification setting -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/manageNotificationPermissionsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/manage_notification_permissions"
            android:layout_weight="1"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/manageNotificationPermissionsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_manage"
            app:tint="@color/md_theme_primary" />
    </LinearLayout>

</LinearLayout>
