<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Add Item Card View Label -->
            <TextView
                android:id="@+id/addItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_item_to_your_fridge"
                android:textColor="@color/md_theme_primary"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/addItemCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- Add Item Card View -->
            <androidx.cardview.widget.CardView
                android:id="@+id/addItemCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/md_theme_secondaryContainer"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addItemLabel" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical">

                        <!-- Text field for item name -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/item_name">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/itemNameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionNext"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Spacer between the fields -->
                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <!-- Text field for quantity -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/quantity">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/itemQuantityEditText"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>



                    <!-- category -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/choose_a_category"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="8dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/categoryDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <!-- expiry date -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <!-- Expiry Date Input Field -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="8dp"
                            android:hint="@string/enter_expiry_date">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/expiryDateEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Web Search Button -->
                        <ImageButton
                            android:id="@+id/webSearchIcon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_search_web"
                            android:layout_marginEnd="16dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:layout_gravity="center_vertical" />
                    </LinearLayout>


                    <!-- comment text Field -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/comment">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/commentEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- save item button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveItemButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_item"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        style="@style/Widget.MaterialComponents.Button" />



                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!-- expiring food card Label -->
            <TextView
                android:id="@+id/expiringFoodLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/expiring_food"
                android:textColor="@color/md_theme_primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/expiringCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addItemCardView" />

            <!-- Expiring Food Card View -->
            <androidx.cardview.widget.CardView
                android:id="@+id/expiringCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp"
                app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expiringFoodLabel">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:padding="16dp"
                    android:fillViewport="true">

                    <ListView
                        android:id="@+id/expiringFoodListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="16dp"
                        android:nestedScrollingEnabled="true" />

                </androidx.core.widget.NestedScrollView>

            </androidx.cardview.widget.CardView>



            <!-- expired food card Label -->
            <TextView
                android:id="@+id/expiredFoodLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/expired_food"
                android:textColor="@color/md_theme_primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/expiringCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/expiredCardView"
                />



            <!-- Expired Food Card View -->
            <androidx.cardview.widget.CardView
                android:id="@+id/expiredCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp"
                app:cardBackgroundColor="@color/md_theme_errorContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/expiredFoodLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.3" >

                <ListView
                    android:id="@+id/expiredFoodListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    />

                <!-- Placeholder TextView -->
                <TextView
                    android:id="@+id/noExpiredFoodText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:text="@string/no_expired_food"
                    android:textSize="16sp"
                    android:textColor="@color/md_theme_onErrorContainer" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
